<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">progressBar</string>
    <string name="filename_plain">plain file : </string>
    <string name="action_settings">Settings</string>
    <string name="filename_encrypted">file size : </string>
    <string name="filename_decrypted">elapsed time : </string>
    <string name="button_encrypt">Encrypt</string>
    <string name="button_decrypt">Decrypt</string>
	<string name="button_file">File</string>

</resources>
