<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.progressbar.MainActivity" >
<!-- 
        android:progressDrawable="@drawable/progress_custom" />
 -->

    <TextView
        android:id="@+id/tvPlainFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView02"
        android:layout_alignBottom="@+id/TextView02"
        android:layout_marginLeft="63dp"
        android:layout_toRightOf="@+id/TextView01"
        android:text="plain.txt" 
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/filename_plain"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView02"
        android:layout_below="@+id/TextView02"
        android:text="@string/filename_encrypted"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView01"
        android:text="@string/filename_decrypted"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btDecrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btEncrypt"
        android:layout_alignBottom="@+id/btEncrypt"
        android:layout_marginLeft="27dp"
        android:layout_toRightOf="@+id/btEncrypt"
        android:minHeight="64dp"
        android:minWidth="128dp"
        android:text="@string/button_decrypt" />

    <TextView
        android:id="@+id/tvFileSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView03"
        android:layout_alignLeft="@+id/tvPlainFile"
        android:text="0 B"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvElapseTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btFile"
        android:layout_alignLeft="@+id/tvFileSize"
        android:text="0 sec"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btEncrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btFile"
        android:layout_toRightOf="@+id/TextView03"
        android:minHeight="64dp"
        android:minWidth="128dp"
        android:text="@string/button_encrypt" />

    <Button
        android:id="@+id/btFile"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView03"
        android:layout_below="@+id/TextView03"
        android:layout_marginTop="30dp"
        android:text="@string/button_file" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/TextView02"
        android:layout_below="@+id/btEncrypt"
        android:layout_marginTop="71dp"
        android:text="@string/filename_encrypted"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/TextView05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView04"
        android:layout_below="@+id/TextView04"
        android:text="@string/filename_decrypted"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvFileSizeCrypto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView04"
        android:layout_alignBottom="@+id/TextView04"
        android:layout_alignLeft="@+id/tvElapseTime"
        android:text="0 B"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvElapseTimeCrypto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView05"
        android:layout_alignBottom="@+id/TextView05"
        android:layout_alignLeft="@+id/tvFileSizeCrypto"
        android:text="0 sec"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btEncryptCrypto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView05"
        android:layout_marginTop="38dp"
        android:layout_toLeftOf="@+id/btDecrypt"
        android:minHeight="64dp"
        android:minWidth="128dp"
        android:text="@string/button_encrypt" />

    <Button
        android:id="@+id/btDecryptCrypto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btEncryptCrypto"
        android:layout_alignBottom="@+id/btEncryptCrypto"
        android:layout_alignLeft="@+id/btDecrypt"
        android:minHeight="64dp"
        android:minWidth="128dp"
        android:text="@string/button_decrypt" />

</RelativeLayout>